# eth-storage

./: .gitignore  Cargo.toml  README.md  history.json
.github/workflows/: rust.yml
db/: Cargo.toml
db/src/: errors.rs  lib.rs  memory_db.rs
merkle/: Cargo.toml
merkle/proptest-regressions/: mpt.txt
merkle/src/: account.rs  lib.rs  main.rs  mpt.rs  nibbles.rs
merkle/src/nodes/: branch.rs  decode.rs  extension.rs  hash.rs  leaf.rs  mod.rs  node.rs
merkle_old/: Cargo.toml
merkle_old/src/: history.rs  main.rs  mpt.rs  nibbles.rs
merkle_old/src/nodes/: branch.rs  decode.rs  extension.rs  mod.rs  node.rs
verkle/: Cargo.toml
verkle/src/: account.rs  committer.rs  constants.rs  crs.rs  lib.rs  stem.rs  storage.rs  trie.rs  utils.rs
verkle/src/nodes/: branch.rs  commitment.rs  leaf.rs  mod.rs  node.rs
verkle/tests/: devnet6.rs  golang_interop.rs  verkle_test_vectors.rs
