[package]
name = "merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.3.3", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.3", features = ["derive"] }
anyhow = "1.0.75"
bytes = "1.5.0"
cita_trie = "5.0.0"
db = { path = "../db" }
derive_more = "0.99.17"
hasher = { version = "0.1.4", features = ["hash-keccak"] }
proptest = "1.3.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha3 = { version = "0.10.8", default-features = false }
