[package]
name = "merkle"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.3.3", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.3", features = ["derive"] }
anyhow = "1.0.81"
db = { path = "../db" }
derive_more = "0.99.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
cita_trie = "5.0.1"
hasher = "0.1.4"
