[package]
name = "verkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.2"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
banderwagon = { git = "https://github.com/crate-crypto/rust-verkle.git", rev = "7688f0aedfb147d3d391abfe8495e46c46d72ce0" }
derive_more = "0.99.17"
once_cell = "1.19.0"
sha2 = "0.10.8"

[dev-dependencies]
hex = "0.4.3"
