[package]
name = "verkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.7.0", features = ["serde", "ssz", "rand"] }
anyhow = "1.0.82"
ark-ec = "0.4.2"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
banderwagon = { git = "https://github.com/crate-crypto/rust-verkle.git", rev = "7688f0aedfb147d3d391abfe8495e46c46d72ce0" }
const-hex = "1.11.4"
db = { path = "../db" }
derive_more = "0.99.17"
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
once_cell = "1.19.0"
sha2 = "0.10.8"
ssz_types = "0.6.0"

[dev-dependencies]
claims = "0.7.1"
rand = "0.8.5"
rstest = "0.19.0"
serde = "1.0.201"
serde_json = "1.0.117"
